fixed footer spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -422,8 +422,16 @@ footer li h3{
 
 	footer {
 		z-index: 0;
-		text-align: center;
+		justify-content: center;
 		background: rgb(82, 21, 21); 
+	}
+
+	footer li{
+		margin: auto 0;
+	}
+	
+	.logo-small a {
+		background-position: 50% 48%;
 	}
 
 }
@@ -495,6 +503,8 @@ footer li h3{
 	================== */
 
 	footer {
+		flex-direction: column;
+		justify-content: space-evenly;
 		height: 12rem;
 		position: static;
 	}
@@ -504,23 +514,16 @@ footer li h3{
 		margin: 0px auto;
 	}
 
-	footer li {
-		top: 20px;
-		position: relative;
-		display: block;
+	.socialmedialinks{
 		color: rgb(255, 255, 255);
-		margin: 20px 0;
+		align-items: center;
+		margin-right: 10px;
 	}
 	footer li h3 {
 		font-weight: 100;
 		font-size: 1em;
-		margin-bottom: 30px;
+		border: none;
 	}
-	footer li a {
-		padding: 0.5rem;
-	}
-
-
 }
 
 
